--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^6.15.1",
+    "react-loadingg": "^1.7.2",
     "react-material-ui-carousel": "^2.2.7",
     "react-number-format": "^4.6.3",
     "react-responsive-carousel": "^3.2.19",
