--- a/package.json
+++ b/package.json
@@ -2,24 +2,31 @@
   "name": "roommate",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:4000",
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
+    "@fontsource/roboto": "^4.5.0",
+    "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.58",
-    "@testing-library/jest-dom": "^5.12.0",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
-    "country-state-city": "^3.0.0",
+    "country-state-city": "^3.0.1",
     "material-ui-phone-number": "^2.2.6",
     "react": "^17.0.2",
+    "react-detect-offline": "^2.4.4",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^6.15.1",
     "react-loadingg": "^1.7.2",
     "react-material-ui-carousel": "^2.2.7",
-    "react-number-format": "^4.6.3",
+    "react-number-format": "^4.6.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-scroll-to-bottom": "^4.1.2",
+    "react-share": "^4.4.0",
+    "socket.io-client": "^4.1.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
